--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -2,3 +2,11 @@ h1 {
   color: red;
   background-color: black;
 }
+
+.active {
+  background-color: green;
+}
+
+.inactive {
+  background-color: red;
+}
